--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,8 +47,7 @@
 
 html,
 body {
-	display: flex;
-	flex-direction: column;
+
 	min-height: 100vh;
 
 	font-family: 'DM Sans', sans-serif;
@@ -57,6 +56,16 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
+}
+
+#root {
+  min-height: 100vh;
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+	flex-direction: column;
 }
 
 /* General */
@@ -149,34 +158,7 @@ body {
 	top: 1px;
 }
 
-/* Projects  */
 
-.projects {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	column-gap: 30px;
-	row-gap: 30px;
-}
-
-.project {
-	max-width: 370px;
-	background-color: var(--project-card-bg);
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
-}
-
-.project__img {
-	border-radius: 10px;
-}
-
-.project__title {
-	padding: 15px 20px 25px;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-	color: var(--project-card-text);
-}
 
 /* Project details */
 
